[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rustcluster-mcp"
version = "0.1.0"
description = "FastMCP clustering advisor — domain-intelligent tools powered by rustcluster"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Fahad Baig", email = "mfbaig35r@gmail.com"},
]
dependencies = [
    "rustcluster>=0.6.0",
    "fastmcp>=2.0.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/mfbaig35r/rustcluster-mcp"
Repository = "https://github.com/mfbaig35r/rustcluster-mcp"

[project.optional-dependencies]
sandbox = [
    "marimo-sandbox>=1.0.9",
    "matplotlib>=3.7",
]
viz = [
    "umap-learn>=0.5",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "ruff",
    "mypy>=1.0",
]
all = [
    "rustcluster-mcp[sandbox,viz,dev]",
]

[project.scripts]
rustcluster-mcp = "rustcluster_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rustcluster_mcp"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/rustcluster_mcp/knowledge_graph.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["rustcluster.*", "fastmcp.*", "marimo.*", "marimo_sandbox.*", "umap.*", "sklearn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["slow: integration tests using real rustcluster"]
